--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,9 @@
+
 trigger:
 - '*'
 
 pool:
-  name: 'Default'    # Ersetzen Sie 'Ihr_Pool_Name' durch den tatsächlichen Namen des Agent Pools
+  name: 'Default'    
   demands:
     - npm
     - agent.name -equals AMANCINI
@@ -24,15 +25,21 @@ steps:
     version: '16.x'
 
 - task: Npm@1
-  displayName: 'Run npm install'
+  displayName: 'Install npm dependencies'
   inputs:
     verbose: true
 
+# Sicherstellen, dass Gulp lokal in node_modules installiert ist
+- script: |
+    npm install gulp --save-dev
+  displayName: 'Install gulp locally'
+
+# Führen Sie Gulp über den lokalen Pfad aus
+- script: './node_modules/.bin/gulp'
+  displayName: 'Run gulp tasks'
+
 - script: './node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)'
   displayName: 'Compile Sass assets'
-
-- task: gulp@1
-  displayName: 'Run gulp tasks'
 
 - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
   displayName: 'Write build info'
