--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 variables:
   buildConfiguration: 'Release'
   wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
-  dotnetSdkVersion: '6.x'
+  dotnetSdkVersion: '8.x'
 
 steps:
 - task: UseDotNet@2
@@ -29,7 +29,7 @@ steps:
   inputs:
     verbose: true
 
-# Sicherstellen, dass Gulp lokal in node_modules installiert ist
+# SSicherstellen, dass Gulp lokal in node_modules installiert ist
 - script: |
     npm install gulp --save-dev
   displayName: 'Install gulp locally'
