--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,8 +34,13 @@ steps:
   displayName: 'Run npm install'
   inputs:
     verbose: true
+    
+- task: CmdLine@2
+  inputs:
+    script: './node_modules/.bin/sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
 
-- script: './node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)'
+
+- script: './node_modules/.bin/sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
   displayName: 'Compile Sass assets'
 
 - task: gulp@1
